portfolio section in progress

--- a/index.html
+++ b/index.html
@@ -208,8 +208,17 @@
     <!-- PORTFOLIO -->
 
     <section class="portfolio_section" id="portfolio">
-        <div class="skills_head">
+        <div class="portfolio_head">
             <h2><span>PORTFOLIO</span></h2>
+        </div>
+
+        <div class="portfolio_main">
+            <div class="portfolio-img">
+                <a href=""><img src="./assets/img/portfolio-3.webp" alt="portfolio image" id="portfolio-img01"></a>
+            </div>
+            <div class="portfolio-img">
+                <a href=""><img src="./assets/img/portfolio-4.webp" alt="portfolio image" id="portfolio-img02"></a>
+            </div>
         </div>
     </section>
     
