--- a/index.html
+++ b/index.html
@@ -207,18 +207,17 @@
 
     <!-- PORTFOLIO -->
 
-    <section class="portfolio_section" id="portfolio">
-        <div class="portfolio_head">
-            <h2><span>PORTFOLIO</span></h2>
+    <section class="portfolio-container">
+        <div class="left-text">
+            <h2 class="heading">MY PORTFOLIO</h2>
         </div>
 
-        <div class="portfolio_main">
-            <div class="portfolio-img">
-                <a href=""><img src="./assets/img/portfolio-3.webp" alt="portfolio image" id="portfolio-img01"></a>
-            </div>
-            <div class="portfolio-img">
-                <a href=""><img src="./assets/img/portfolio-4.webp" alt="portfolio image" id="portfolio-img02"></a>
-            </div>
+        <div class="gallery">
+            <div class="box" style="background-image:url(https://images.unsplash.com/photo-1545665277-5937489579f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cG9ydGZvbGlvfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);">portfolio1</div>
+            <div class="box" style="background-image:url(./assets/img/portfolio-4.webp);">portfolio2</div>
+            <div class="box" style="background-image:url(./assets/img/portfolio-3.webp);">portfolio3</div>
+            <div class="box" style="background-image:url(https://images.unsplash.com/photo-1557200134-90327ee9fafa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NXw3NzUyMzMxOXx8ZW58MHx8fHx8&auto=format&fit=crop&w=1200&q=60);">portfolio4</div>
+            
         </div>
     </section>
     
