--- a/index.html
+++ b/index.html
@@ -207,16 +207,16 @@
 
     <!-- PORTFOLIO -->
 
-    <section class="portfolio-container">
+    <section class="portfolio-container" id="portfolio">
         <div class="left-text">
             <h2 class="heading">MY PORTFOLIO</h2>
         </div>
 
         <div class="gallery">
-            <div class="box" style="background-image:url(https://images.unsplash.com/photo-1545665277-5937489579f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cG9ydGZvbGlvfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);">portfolio1</div>
-            <div class="box" style="background-image:url(./assets/img/portfolio-4.webp);">portfolio2</div>
-            <div class="box" style="background-image:url(./assets/img/portfolio-3.webp);">portfolio3</div>
-            <div class="box" style="background-image:url(https://images.unsplash.com/photo-1557200134-90327ee9fafa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NXw3NzUyMzMxOXx8ZW58MHx8fHx8&auto=format&fit=crop&w=1200&q=60);">portfolio4</div>
+            <div class="portfolio-box" style="background-image:url(https://images.unsplash.com/photo-1545665277-5937489579f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cG9ydGZvbGlvfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);">portfolio1</div>
+            <div class="portfolio-box" style="background-image:url(./assets/img/portfolio-4.webp);">portfolio2</div>
+            <div class="portfolio-box" style="background-image:url(./assets/img/portfolio-3.webp);">portfolio3</div>
+            <div class="portfolio-box" style="background-image:url(https://images.unsplash.com/photo-1557200134-90327ee9fafa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NXw3NzUyMzMxOXx8ZW58MHx8fHx8&auto=format&fit=crop&w=1200&q=60);">portfolio4</div>
             
         </div>
     </section>
