--- a/index.html
+++ b/index.html
@@ -221,6 +221,30 @@
         </div>
     </section>
     
+    <!-- CONTACT ME -->
+    <section class="contact section" id="contact">
+        <div class="contact-title">
+            <h2 class="section-title">
+                CONTACT ME
+            </h2>
+        </div>
+
+        <div class="contact-container containerContact grid">
+            <form action="" class="contact-form" id="contactFform">
+                <div class="contact-group">
+                <input type="text" name="user_name" required placeholder="Enter your name" class="contact-input">
+                <input type="email" name="user_email" required placeholder="Enter your email" class="contact-input">
+                </div>
+
+                <textarea name="user_project" required placeholder="Enter your message" class="contact-input"></textarea>
+                <p class="contact-message" id="contact_message"></p>
+
+                <button type="submit" class="button contact-button">
+                    <h3 class="send-message">Send Message</h3>
+                </button>
+            </form>
+        </div>
+    </section>
 
 
 
