skills section update

--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
                     <span class="mongo"></span>
                 </div>
             </div>
+            <div class="skill_bar">
+                <div class="info">
+                    <p>Express js</p>
+                    <P>45%</P>
+                </div>
+                <div class="bar">
+                    <span class="express"></span>
+                </div>
+            </div>
         </div>
     </section>
 
